--- a/globals.css
+++ b/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,6 +8,13 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Inter", sans-serif;
+}
+
+.RNS{
+  background-image: url('/homepage.png');
+  background-size: cover ;
+  background-repeat : no repeat;
+  
 }
 
 /* Modal Styles */
@@ -198,4 +204,40 @@ body {
   40% {
     transform: rotate(50deg) scale(1);
   }
+}
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap");
+body {
+  margin: 0;
+  line-height: normal;
+}
+:root {
+  /* fonts */
+  --font-inter: Inter;
+
+  /* font sizes */
+  --font-size-5xl: 24px;
+  --font-size-xl: 20px;
+  --font-size-11xl: 30px;
+  --font-size-13xl: 32px;
+  --font-size-26xl: 45px;
+  --font-size-41xl: 60px;
+  --font-size-2xl: 21px;
+  --font-size-base: 16px;
+
+  /* Colors */
+  --color-darkslategray-100: #344d61;
+  --color-lightgray-100: #d4d4d4;
+  --color-lightgray: #d3d3d3;
+  --color-mediumspringgreen: #62ffb3;
+  --color-black: #000;
+  --color-white: #fff;
+  --color-midnightblue: #002367;
+  --color-whitesmoke: #f8f8f8;
+
+  /* Border radiuses */
+  --br-4xs: 9px;
+  --br-3xl: 22px;
+  --br-61xl-5: 80.5px;
+  --br-base: 16px;
+  --br-26xl: 45px;
 }
